--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=co.com.gsdd.docker-config-util
+sonar.projectKey=docker-config-util
 sonar.projectName=docker-config-util
 sonar.projectVersion=1.0
 
@@ -9,6 +9,10 @@ sonar.java.coveragePlugin= jacoco
 sonar.coverage.exclusions=**/constants/**
 
 sonar.projectBaseDir=.
-sonar.sources=src/main/java/co/com/gsdd
-sonar.java.binaries=target/classes/co/com/gsdd
+sonar.sources=src/main/java/com/gsdd
+sonar.java.binaries=target/classes/com/gsdd
 sonar.java.libraries=target/dependency/lombok-*.jar
+sonar.tests=src/test/java/com/gsdd
+sonar.tests.binaries=target/test-classes/com/gsdd
+sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
+sonar.coverage.jacoco.xmlReportPaths=target/coverage-reports/jacoco-ut/jacoco.xml,target/coverage-reports/jacoco-it/jacoco.xml
