--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,13 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<mvn.compiler.plugin.version>3.10.1</mvn.compiler.plugin.version>
-		<mvn.jacoco.plugin.version>0.8.7</mvn.jacoco.plugin.version>
+		<mvn.jacoco.plugin.version>0.8.8</mvn.jacoco.plugin.version>
 		<mvn.failsafe.plugin.version>3.0.0-M5</mvn.failsafe.plugin.version>
 		<mvn.surefire.plugin.version>3.0.0-M5</mvn.surefire.plugin.version>
 		<mvn.javadoc.plugin.version>3.3.2</mvn.javadoc.plugin.version>
-		<mvn.format.plugin.version>2.10.0</mvn.format.plugin.version>
+		<mvn.spotless.plugin.version>2.22.1</mvn.spotless.plugin.version>
+		<mvn.checkstyle.plugin.version>3.1.2</mvn.checkstyle.plugin.version>
+		<mvn.dependency-check.plugin.version>7.0.4</mvn.dependency-check.plugin.version>
 		<mvn.dependency.plugin.version>3.3.0</mvn.dependency.plugin.version>
 		<mvn.source.plugin.version>3.2.1</mvn.source.plugin.version>
 
@@ -36,11 +38,7 @@
 		<!-- If true skips IT test execution -->
 		<skip.integration.tests>false</skip.integration.tests>
 
-		<!-- JaCoCo props -->
-		<jacoco.ut.exec>${project.build.directory}/coverage-reports/jacoco-ut.exec</jacoco.ut.exec>
-		<jacoco.ut.reportPath>${project.build.directory}/coverage-reports/jacoco-ut</jacoco.ut.reportPath>
-		<jacoco.it.exec>${project.build.directory}/coverage-reports/jacoco-it.exec</jacoco.it.exec>
-		<jacoco.it.reportPath>${project.build.directory}/coverage-reports/jacoco-it</jacoco.it.reportPath>
+		<checkstyle.version>10.1</checkstyle.version>
 
 		<lombok.version>1.18.22</lombok.version>
 		<!-- test dependencies -->
@@ -71,6 +69,23 @@
 	</dependencies>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-checkstyle-plugin</artifactId>
+					<version>${mvn.checkstyle.plugin.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>com.puppycrawl.tools</groupId>
+							<artifactId>checkstyle</artifactId>
+							<version>${checkstyle.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -84,12 +99,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${mvn.surefire.plugin.version}</version>
 				<configuration>
-					<!-- Sets the VM argument line used when unit tests are run. -->
-					<argLine>${surefireArgLine}</argLine>
 					<skipTests>${skip.unit.tests}</skipTests>
 					<!-- Excludes integration tests when unit tests are run. -->
 					<excludes>
-						<exclude>**/IT*.java</exclude>
+						<exclude>**/It*.java</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
@@ -106,8 +119,6 @@
 							<goal>verify</goal>
 						</goals>
 						<configuration>
-							<!-- Sets the VM argument line used when integration tests are run. -->
-							<argLine>${failsafeArgLine}</argLine>
 							<skipTests>${skip.integration.tests}</skipTests>
 						</configuration>
 					</execution>
@@ -124,10 +135,6 @@
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
-						<configuration>
-							<destFile>${jacoco.ut.exec}</destFile>
-							<propertyName>surefireArgLine</propertyName>
-						</configuration>
 					</execution>
 
 					<execution>
@@ -136,10 +143,6 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
-						<configuration>
-							<dataFile>${jacoco.ut.exec}</dataFile>
-							<outputDirectory>${jacoco.ut.reportPath}</outputDirectory>
-						</configuration>
 					</execution>
 
 					<execution>
@@ -148,10 +151,6 @@
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
-						<configuration>
-							<destFile>${jacoco.it.exec}</destFile>
-							<propertyName>failsafeArgLine</propertyName>
-						</configuration>
 					</execution>
 
 					<execution>
@@ -160,9 +159,35 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+					</execution>
+
+					<execution>
+						<id>jacoco-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
 						<configuration>
-							<dataFile>${jacoco.it.exec}</dataFile>
-							<outputDirectory>${jacoco.it.reportPath}</outputDirectory>
+							<rules>
+								<rule>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.95</minimum>
+										</limit>
+									</limits>
+								</rule>
+								<rule>
+									<element>CLASS</element>
+									<limits>
+										<limit>
+											<counter>BRANCH</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.95</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
 						</configuration>
 					</execution>
 				</executions>
@@ -183,17 +208,79 @@
 			</plugin>
 
 			<plugin>
-				<groupId>net.revelc.code.formatter</groupId>
-				<artifactId>formatter-maven-plugin</artifactId>
-				<version>${mvn.format.plugin.version}</version>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>${mvn.spotless.plugin.version}</version>
 				<configuration>
-					<configFile>${project.basedir}/eclipse-java-google-style.xml</configFile>
-					<lineEnding>CRLF</lineEnding>
+					<!-- optional: limit format enforcement to just the files changed by
+						this feature branch -->
+					<ratchetFrom>origin/main</ratchetFrom>
+					<formats>
+						<!-- you can define as many formats as you want, each is independent -->
+						<format>
+							<!-- define the files to apply to -->
+							<includes>
+								<include>*.xml</include>
+							</includes>
+							<trimTrailingWhitespace />
+							<endWithNewline />
+						</format>
+					</formats>
+					<!-- define a language-specific format -->
+					<java>
+						<googleJavaFormat>
+							<version>1.15.0</version>
+							<style>AOSP</style>
+							<reflowLongStrings>true</reflowLongStrings>
+						</googleJavaFormat>
+						<trimTrailingWhitespace />
+						<endWithNewline />
+						<removeUnusedImports />
+					</java>
 				</configuration>
 				<executions>
 					<execution>
+						<id>spotless-validate</id>
 						<goals>
-							<goal>format</goal>
+							<goal>apply</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<consoleOutput>true</consoleOutput>
+					<failsOnError>true</failsOnError>
+					<linkXRef>false</linkXRef>
+					<suppressionsLocation>${project.basedir}/ch-suppressions.xml</suppressionsLocation>
+				</configuration>
+				<executions>
+					<execution>
+						<id>checkstyle-validate</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>${mvn.dependency-check.plugin.version}</version>
+				<configuration>
+					<failBuildOnCVSS>8</failBuildOnCVSS>
+					<suppressionFile>${project.basedir}/dc-suppressions.xml</suppressionFile>
+				</configuration>
+				<executions>
+					<execution>
+						<id>dependency-check-validate</id>
+						<goals>
+							<goal>check</goal>
 						</goals>
 					</execution>
 				</executions>
