--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,6 @@ sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.java.source=15
 sonar.java.coveragePlugin= jacoco
-sonar.coverage.exclusions=**/constants/**
 
 sonar.projectBaseDir=.
 sonar.sources=src/main/java/com/gsdd
@@ -15,4 +14,5 @@ sonar.java.libraries=target/dependency/lombok-*.jar
 sonar.tests=src/test/java/com/gsdd
 sonar.tests.binaries=target/test-classes/com/gsdd
 sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
-sonar.coverage.jacoco.xmlReportPaths=target/coverage-reports/jacoco-ut/jacoco.xml,target/coverage-reports/jacoco-it/jacoco.xml
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+sonar.dependencyCheck.htmlReportPath=target/dependency-check-report.html
