--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=docker-config-util
 sonar.projectName=docker-config-util
 sonar.projectVersion=2.0
 
-sonar.login=965ad802fb470711f31de99992723086fe4b8022
+sonar.login=${env.SONAR_LOGIN_TOKEN}
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.java.source=15
