--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,15 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+		<groupId>com.gsdd</groupId>
+		<artifactId>gsdd-parent</artifactId>
+		<version>1.0.1</version>
+	</parent>	
 
-	<groupId>com.gsdd</groupId>
 	<artifactId>docker-config-util</artifactId>
-	<version>2.0.2</version>
+	<version>2.0.3</version>
 	<packaging>jar</packaging>
 
 	<name>docker-config-util</name>
@@ -14,90 +19,43 @@
 	</organization>
 
 	<properties>
-		<project.encoding>UTF-8</project.encoding>
-		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
-		<project.build.targetEncoding>${project.encoding}</project.build.targetEncoding>
-		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
-		<java.version>17</java.version>
-
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<mvn.compiler.plugin.version>3.10.1</mvn.compiler.plugin.version>
-		<mvn.jacoco.plugin.version>0.8.8</mvn.jacoco.plugin.version>
-		<mvn.failsafe.plugin.version>3.0.0-M8</mvn.failsafe.plugin.version>
-		<mvn.surefire.plugin.version>3.0.0-M8</mvn.surefire.plugin.version>
-		<mvn.javadoc.plugin.version>3.4.1</mvn.javadoc.plugin.version>
-		<mvn.spotless.plugin.version>2.33.0</mvn.spotless.plugin.version>
-		<mvn.checkstyle.plugin.version>3.2.1</mvn.checkstyle.plugin.version>
-		<mvn.dependency-check.plugin.version>8.0.2</mvn.dependency-check.plugin.version>
-		<mvn.dependency.plugin.version>3.5.0</mvn.dependency.plugin.version>
-		<mvn.source.plugin.version>3.2.1</mvn.source.plugin.version>
-
 		<!-- If true skips UT test execution -->
 		<skip.unit.tests>false</skip.unit.tests>
 		<!-- If true skips IT test execution -->
 		<skip.integration.tests>false</skip.integration.tests>
-
-		<checkstyle.version>10.1</checkstyle.version>
-
-		<lombok.version>1.18.26</lombok.version>
-		<!-- test dependencies -->
-		<junit.version>5.9.2</junit.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-params</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-checkstyle-plugin</artifactId>
-					<version>${mvn.checkstyle.plugin.version}</version>
-					<dependencies>
-						<dependency>
-							<groupId>com.puppycrawl.tools</groupId>
-							<artifactId>checkstyle</artifactId>
-							<version>${checkstyle.version}</version>
-						</dependency>
-					</dependencies>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${mvn.compiler.plugin.version}</version>
 			</plugin>
 
 			<!-- Used for unit tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${mvn.surefire.plugin.version}</version>
 				<configuration>
 					<skipTests>${skip.unit.tests}</skipTests>
 					<!-- Excludes integration tests when unit tests are run. -->
@@ -110,7 +68,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>${mvn.failsafe.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>integration-tests</id>
@@ -128,7 +85,6 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${mvn.jacoco.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>pre-unit-test</id>
@@ -196,7 +152,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>${mvn.javadoc.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -210,7 +165,6 @@
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
 				<artifactId>spotless-maven-plugin</artifactId>
-				<version>${mvn.spotless.plugin.version}</version>
 				<configuration>
 					<!-- optional: limit format enforcement to just the files changed by
 						this feature branch -->
@@ -269,7 +223,6 @@
 			<plugin>
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
-				<version>${mvn.dependency-check.plugin.version}</version>
 				<configuration>
 					<failBuildOnCVSS>8</failBuildOnCVSS>
 					<suppressionFile>${project.basedir}/dc-suppressions.xml</suppressionFile>
@@ -287,7 +240,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>${mvn.dependency.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>copy-dependencies</id>
@@ -305,7 +257,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>${mvn.source.plugin.version}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
